# Full_stack-flask_flet

apps/backend/: .env.example  .gitignore  docker-compose.yml  pyproject.toml
apps/backend/src/: app.py  models.py
apps/backend/src/routes/: characters.py  dragons.py  houses.py  swords.py
apps/backend/src/schemas/: characters_schema.py  dragons_schema.py  houses_schema.py  swords_schema.py
apps/backend/src/scripts/: seed.py
apps/frontend/: hello.py  main.py  pyproject.toml
apps/frontend/src/: api.py  state.py
apps/frontend/src/views/: characters.py  dragons.py  houses.py  swords.py
apps/landing/: index.html
